# simple-compute-market

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  Dockerfile.installer-test  LICENSE  Makefile  README.md  compose.apitokens.yml  compose.dev.yml  compose.vms.yml  config.registry.env.example  docker-compose.yml  gen_simple_index.py  install.sh  market-installer.sh  pyproject.toml
agent-client/: README.md  pyproject.toml
agent-client/src/agent_client/: __init__.py  client.py  models.py
async-provisioning-service/: .env.docker-compose  .env.production.sample  .env.sample  .gitignore  Dockerfile  Dockerfile.dockerignore  Makefile  README.md  pyproject.toml  start-api.sh  start-worker.sh  start.sh
async-provisioning-service/migrations/: 001_add_process_id_and_cancelled_status.py  001_initial_schema.py
async-provisioning-service/src/async_provisioning_service/: __init__.py  config.py  main.py  worker.py
async-provisioning-service/tests/: conftest.py
async-provisioning-service/tests/integration/: test_container_smoke.py  test_provisioning_e2e.py
async-provisioning-service/tests/unit/: conftest.py  test_auth.py  test_job_processor.py  test_main.py  test_management_vars.py  test_multi_agent.py  test_provisioning_shutdown.py  test_provisioning_utils.py  test_queue.py  test_rate_limit.py  test_routes.py  test_worker.py
buyer/: INSTALLER.md  Makefile  main.py  pyproject.toml
buyer/config/: agent.schema.yaml  provisioning.schema.yaml  registry.schema.yaml  zerotier.schema.yaml
buyer/market_buyer/: __init__.py  aggregation.py  buy_orchestrator.py  buyer_client.py  cli.py  common.py  counter_policy.py  escrow_client.py  escrow_selection.py  run_log.py
buyer/market_buyer/groups/: _cli_helpers.py  _deal.py  buy.py  chain.py  config.py  escrow.py  listing.py  logs.py  negotiate.py  network.py  order.py  policy.py  portfolio.py  settle.py
buyer/tests/: conftest.py  test_agent_mode.py  test_aggregation.py  test_aggregation_file_discovery.py  test_aggregation_policy.py  test_buy_orchestrator.py  test_buy_pricing_and_filters.py  test_buy_resume_cli.py  test_buyer_client.py  test_buyer_client_resume.py  test_config_init.py  test_counter_policy.py  test_escrow_client_dispatch.py  test_negotiation_config.py  test_order_auth.py  test_provide_helpers.py  test_resume_helpers.py
cli/: INSTALLER.md  Makefile  main.py  pyproject.toml
cli/config/: agent.schema.yaml
cli/market/: __init__.py  buy_orchestrator.py  buyer_client.py  canary.py  canary_rollback.py  cli.py  common.py  config_loader.py  helpers.py
cli/market/groups/: __init__.py  agent.py  buy.py  (+11 more)
cli/tests/: conftest.py  test_agent_commands.py  test_agent_mode.py  test_buy_orchestrator.py  test_buyer_client.py  test_canary_actors.py  test_canary_rollback.py  test_config_init.py  test_dev_cli.py  test_order_auth.py  test_order_cli.py  test_prod_canary_smoke.py  test_provide_helpers.py
config/: pyproject.toml
core/: Dockerfile  Dockerfile.dockerignore  Makefile  action.py  docker-compose.yaml  entrypoint.sh  interface.py  policy.py  pyproject.toml  schemas.py
core/agent/: .env.alice.docker  .env.alice.docker-compose  .env.bob.docker  .env.bob.docker-compose  .env.production.sample  .env.sample  Dockerfile  Makefile  README.md  __init__.py  action.py  docker-compose.yaml  entrypoint.sh  interface.py  policy.py  test_market_env.py
core/buyer/: Makefile  pyproject.toml
core/registry/: Dockerfile  Makefile  README.md  docker-compose.yml  filter-spec.yaml  pyproject.toml
core/registry-client/: pyproject.toml
core/scripts/: extract_anvil_addresses.py  register_onchain.py
core/site/: Makefile  pyproject.toml
core/storefront/: Makefile  pyproject.toml
core/storefront-client/: Makefile  README.md  pyproject.toml
erc-8004-registry-py/: .dockerignore  .env.docker-compose  .env.production.sample  .env.sample  .gitignore  AGENT_INTEGRATION.md  ANVIL_SETUP.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
erc-8004-registry-py/alembic/: env.py
erc-8004-registry-py/src/: config.py  main.py
erc-8004-registry-py/tests/: __init__.py  conftest.py
infra/: Makefile  pyproject.toml
infra/sandbox/: backend.tf  main.tf  providers.tf  variables.tf
infra/zerotier/: .env.sample  ZeroTierSetup.MD  authorize_approved_members.sh  authorize_zt_member.sh  create_ztnetwork.sh  get_peers.sh
integration-tests/: .gitignore  .secrets.toml  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml  settings.toml
integration-tests/arkhai_e2e_tests/: __init__.py  agent_client.py  registry_client.py  settings.py  web3_client.py
integration-tests/config/: config-docker.yml  config-e2e-mock.yml  config-local.yml  config-staging.yml  config.yml
integration-tests/src/: agent_client.py  eip191_http_client.py  provisioning_test_client.py  registry_client.py  settings.py  web3_client.py
integration-tests/tests/: conftest.py  test_agents.py  test_contracts.py  test_mock_provisioning.py  test_provisioning_smoke.py  test_registry.py  test_storefront_smoke.py  test_wallets.py
kit/alkahest/: Makefile  pyproject.toml
kit/config/: Makefile  pyproject.toml
kit/identity/: Makefile  pyproject.toml
kit/policy/: Makefile  pyproject.toml
policy/: pyproject.toml
registry/: .env.sample  README.md  main.py  pyproject.toml  registry.db
registry-client/: pyproject.toml
registry-service/: .env.docker-compose  .env.sample  Dockerfile  Makefile  README.md  docker-compose.yml  filter-spec.yaml  pyproject.toml
registry-service/src/: config.py  main.py
registry-service/tests/: conftest.py
service/: Makefile  pyproject.toml
storefront/: .env.alice.docker-compose  .env.bob.docker  .env.bob.docker-compose  .env.sample  Dockerfile  Dockerfile.dockerignore  Makefile  Makefile.agent  config.alice.toml  config.bob.toml  entrypoint.sh  pyproject.toml  storefront.alice.toml  storefront.bob.toml
storefront/scripts/: download_models.sh  extract_anvil_addresses.py  generate_alkahest_transactions.py  import_resources_csv.py  register_onchain.py
tools/issue-discovery/: README.md  pyproject.toml
(+1786 files in other folders)
