[project]
name = "market-cli"
version = "0.1.0"
description = "CLI for the market components"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[project.scripts]
market = "market.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli/market"]

[tool.hatch.build.targets.wheel.force-include]
"agent" = "market/_bundled/agent"
"erc-8004-registry-py" = "market/_bundled/erc-8004-registry-py"
"async-provisioning-service" = "market/_bundled/async-provisioning-service"
"erc-8004-contracts" = "market/_bundled/erc-8004-contracts"
"compute-provisioning-iac" = "market/_bundled/compute-provisioning-iac"
"infra" = "market/_bundled/infra"
"cli/config" = "market/_bundled/cli/config"

[tool.hatch.build]
exclude = [
  "**/.venv",
  "**/node_modules",
  "**/__pycache__",
  "**/.env",
  "**/.env.tmp",
  "**/*.egg-info",
  "**/.git",
  "**/Dockerfile",
  "**/docker-compose*.yml",
  ".github",
  ".claude",
  "scripts",
  "install.sh",
  "market-installer.sh",
  "Dockerfile.*",
]
