[project]
name = "arkhai-agent-client"
version = "0.1.0"
description = "Lightweight async HTTP client for the Arkhai agent REST API."
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "eth-account>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_client"]