[project]
name = "arkhai-agent-client"
version = "0.1.2"
description = "Async and sync HTTP clients for the Arkhai agent REST API."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "eth-account>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_client"]
