[project]
name = "async-provisioning-service"
version = "0.1.0"
description = "Async VM provisioning service"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "pytest>=9.0.2",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.26",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
