[project]
name = "async-provisioning-service"
version = "0.1.0"
description = "Async VM provisioning service"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "cachetools>=5.3",
    "pyyaml>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "httpx>=0.26",
    "pytest-cov>=7.0.0",
]
