[project]
name = "market-buyer"
version = "0.1.0"
description = "Buyer-side CLI for the market: discover sellers, negotiate, place orders. Pure HTTP client; no server, no agent runtime."
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "PyYAML>=6.0.0",
  "pyinstaller>=6.19.0",
  "eth-account>=0.13.0",
  # Needed by the buyer orchestrator (market buy-sync) for in-process
  # on-chain escrow creation. Imported lazily from
  # market_buyer.escrow_client so loading the CLI does not pay the
  # native-binary cost unless the orchestrator actually runs.
  "alkahest-py",
  "market-service",
  "market-policy",
  "arkhai-storefront-client>=0.2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[project.scripts]
market = "market_buyer.cli:app"

# Workspace resolution for sibling packages.
# market-service: token registry + alkahest address resolution for the
# buyer orchestrator (buy-sync).
# market-policy: per-round negotiation decision logic, shared with the
# storefront so both sides drive negotiation through one engine.
# arkhai-storefront-client: typed HTTP SDK for /orders/* + /alerts/*
# endpoints on a storefront. Used by `market order create/close/discover/match`.
[tool.uv.sources]
market-service = { path = "../service", editable = true }
market-policy = { path = "../policy", editable = true }
arkhai-storefront-client = { path = "../storefront-client", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["market_buyer"]
