[project]
name = "market-cli"
version = "0.1.0"
description = "CLI for the market components"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.scripts]
market = "market.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["market"]
