[project]
name = "market-core"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "your@email.com"},
]
#3.13 requires numpy>2 or else you have to install the gcc toolchain and compile numpy yourself.
#pufferlib requires numpy<2. So we're stuck with python 3.12
requires-python = ">=3.12,<3.13"
dependencies = [
    "market-service",
    "google-adk[a2a] @ git+https://github.com/google/adk-python@5eca72f9bfd05c7c28a3d738391138a59a31167d",
    "opentelemetry-exporter-gcp-trace>=1.9.0,<2.0.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "google-cloud-aiplatform[evaluation]>=1.118.0,<2.0.0",
    "fastapi~=0.115.8",
    "uvicorn~=0.34.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "a2a-sdk>=0.3.9",
    "torch>=2.7.0",
    "pufferlib>=3.0.0",
    "alkahest-py",
    "web3>=7.14.0",
    "websockets>=15.0.1",
    "aiohttp>=3.12.15",
]

requires-python = ">=3.12,<3.14"


[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
]

[project.optional-dependencies]

jupyter = [
    "jupyter>=1.0.0,<2.0.0",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "mypy>=1.15.0,<2.0.0",
    "codespell>=2.2.0,<3.0.0",
    "types-pyyaml>=6.0.12.20240917,<7.0.0",
    "types-requests>=2.32.0.20240914,<3.0.0",
]

[tool.uv]
no-build-isolation-package = ["pufferlib"]

# requirement for pufferlib 3.0.0
[tool.uv.extra-build-dependencies]
pufferlib = ["setuptools", "Cython", "numpy<2"]

[tool.uv.sources]
market-service = { path = "../service", editable = true }
torch = [
    { index = "pytorch-cpu" },
]
alkahest-py = [
    { path = "packages/alkahest_py-0.1.0-cp312-cp312-macosx_11_0_arm64.whl", marker = "sys_platform == 'darwin' and platform_machine == 'arm64'" },
    { path = "packages/alkahest_py-0.1.0-cp312-cp312-macosx_10_12_x86_64.whl", marker = "sys_platform == 'darwin' and platform_machine == 'x86_64'" },
    { path = "packages/alkahest_py-0.1.0-cp312-cp312-manylinux_2_36_aarch64.whl", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
    { path = "packages/alkahest_py-0.1.0-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["agent", "app"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
disallow_subclassing_any = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
follow_imports = "silent"
ignore_missing_imports = true
explicit_package_bases = true
disable_error_code = ["misc", "no-untyped-call", "no-any-return"]

exclude = [".venv"]

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/*.ipynb"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = [".", "..", "../agent"]
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.metadata]
allow-direct-references=true

[tool.hatch.build.targets.wheel]
packages = ["agent"]
