[project]
name = "market-core"
version = "0.1.0"
description = "Core market wire models and orchestration-neutral helpers"
requires-python = ">=3.10,<3.14"
dependencies = [
    "market-identity",
    "pydantic>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_core"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests/unit"]

[tool.uv.sources]
market-identity = { path = "../kit/identity", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
]
