[project]
name = "market-infra"
version = "0.1.0"
description = "Operator-side infra CLI for the market: bring up the local chain, deploy ERC-8004 contracts, run the registry indexer, and admin the ZeroTier network. Run once per market by the trust authority — distinct from the per-agent runtimes (`market`, `market-storefront`)."
requires-python = ">=3.10,<3.14"
dependencies = [
    "typer>=0.12.0",
]

[project.scripts]
market-infra = "market_infra.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_infra"]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
]
