[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arkhai-e2e-tests"
version = "0.1.0"
description = "End-to-end integration tests for Arkhai deployed blockchain environments"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-html>=4.0",
    "pytest-xdist>=3.5",
    "dynaconf>=3.2",
    "web3>=7.0",
    "eth-account>=0.12",
    "eth-typing>=4.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "httpx>=0.27",            # used by test_provisioning_smoke and SyncRegistryClient
    # Workspace dependency: tests use the real discovery/matching logic,
    # not a re-implementation. Keeps test behavior aligned with storefront behavior.
    "arkhai-storefront-client>=0.7.0",
    "arkhai-registry-client>=0.3.0",
    "market-service>=0.1.0",
	"market-storefront>=0.1.0",
    "provisioning-service>=0.3.0",
]

[tool.uv]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--tb=short",
    "-v",
    "--strict-markers",
]
markers = [
    "contracts: Tests that validate on-chain contract state",
    "wallets: Smoke tests that validate wallet balances and key pairs",
    "registry: Smoke tests that validate the Registry REST API",
    "storefront: Smoke tests that validate seller storefront",
	"provisioning: Smoke tests for the deployed provisioning service REST API",
    "e2e_deal: Full buyer-seller deal lifecycle e2e test",
    "smoke: Quick smoke tests",
    "slow: Tests that may take longer due to RPC latency",
    "mock_provisioning: E2E mock provisioning flow tests",
    "mock_provisioning_happy: Happy path — deal completes successfully",
    "mock_provisioning_failure: Failure path — provisioning fails, orders reopen",
    "roles_layer_external: External layer — EVM chain + deployed contracts",
    "roles_layer_market: Market layer — marketplace operator's registry service",
    "roles_layer_seller: Seller layer — a seller's agent + provisioning service",
    "roles_layer_buyer: Buyer layer — a buyer's agent",
    "roles_discovery_seller: Discovery stage, seller perspective",
    "roles_discovery_buyer: Discovery stage, buyer perspective",
    "roles_negotiation_seller: Negotiation stage, seller perspective",
    "roles_negotiation_buyer: Negotiation stage, buyer perspective",
    "roles_settlement_seller: Settlement stage, seller perspective",
    "roles_settlement_buyer: Settlement stage, buyer perspective",
    "roles_provision_seller: Provision stage, seller perspective",
    "roles_provision_buyer: Provision stage, buyer perspective",
    "roles_post_settlement_seller: Post-settlement stage, seller perspective",
    "roles_post_settlement_buyer: Post-settlement stage, buyer perspective",
    "roles_cli_buy: CLI tests for `market buy` (consumes seller inventory; run separately from roles_stage_*)",
    "roles_cli_provide: CLI tests for `market provide` (imports a throwaway CSV, publishes orders)",
    
]
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_date_format = "%Y-%m-%dT%H:%M:%S"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true