[project]
name = "market-policy"
version = "0.1.0"
description = "Domain-agnostic policy engine for the market — negotiation thread store, action builders, callable registry, and policy evaluation."
requires-python = ">=3.10,<3.14"
dependencies = [
    "market-service",
    "pydantic>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_policy"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.uv.sources]
market-service = { path = "../service", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
]
