[project]
name = "arkhai-registry-client"
version = "0.1.0"
description = "Lightweight synchronous HTTP client for the Arkhai ERC-8004 registry REST API."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "eth-account>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/registry_client"]
