[project]
name = "registry"
version = "0.1.0"
description = "Agent Registry FastAPI Application"
authors = [{name = "Registry Team"}]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pyjwt>=2.8.0",
    "aiohttp>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
]

[tool.uv]
