[project]
name = "market-service"
version = "0.1.0"
description = "External service clients for the agent marketplace"
requires-python = ">=3.10,<3.14"
dependencies = [
    "aiohttp>=3.12.15",
    "web3>=7.14.0",
    "eth-account",
    "pydantic>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/service"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
]
