[project]
name = "market-service"
version = "0.1.1"
description = "External service clients for the agent marketplace"
requires-python = ">=3.10,<3.14"
dependencies = [
    "aiohttp>=3.12.15",
    "web3>=7.14.0",
    "eth-account",
    "pydantic>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/service"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests/unit", "tests/integration"]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
    # alkahest-py is a test-time dep: src/service/clients/alkahest.py
    # lazily imports it inside _sdk_addresses_for_chain. The service
    # package itself doesn't ship alkahest-py — consumers (storefront,
    # buyer) carry it as a runtime dep.
    "alkahest-py>=0.3.0",
]

[tool.uv.sources]
# Pinned to alkahest main HEAD until a published wheel ships PR #63's
# get_obligation methods + PR #64's http transport support.
alkahest-py = { git = "https://github.com/arkhai-io/alkahest", rev = "af76bf193fe74acc4ddd4ed57966780dde761a34", subdirectory = "sdks/py" }
