[project]
name = "core-buyer"
version = "0.1.0"
description = "Core buyer role shell and orchestration contracts"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core_buyer"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/unit"]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
]
