[project]
name = "core-buyer"
version = "0.1.0"
description = "Core buyer role shell and orchestration contracts"
requires-python = ">=3.12"
dependencies = [
  # The `market` verb skeleton + plugin assembly (core_buyer.cli).
  "typer>=0.12.0",
  # Generic registry discovery config (registry.urls/auth/discovery_timeout)
  # comes from the shared buyer TOML loader in kit.
  "market-config",
]

[project.scripts]
market = "core_buyer.cli:main"

[tool.uv.sources]
market-config = { path = "../../kit/config", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core_buyer"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/unit"]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
]
