[project]
name = "arkhai-registry-client"
version = "0.10.0"
description = "Async and sync HTTP clients for the Arkhai registry REST API."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "eth-account>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/registry_client"]
