[project]
name = "arkhai-core-site"
version = "0.1.0"
license = "MIT"
description = "Site-authority scaffold: capacity ledger, tables, and HTTP surface"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core_site"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/unit"]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
]
