[project]
name = "arkhai-core-storefront"
version = "0.1.0"
license = "MIT"
description = "Core storefront role shell and protocol helpers"
requires-python = ">=3.12"
dependencies = [
    "arkhai-core",
    "arkhai-core-registry-client",
    "arkhai-kit-config",
    "arkhai-kit-identity",
    "arkhai-kit-policy",
    "httpx>=0.27",
    "pydantic>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core_storefront"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/unit"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.25,<2.0",
]
