[project]
name = "arkhai-kit-alkahest"
version = "0.1.0"
description = "Alkahest settlement codecs, token helpers, and chain probes for the market"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic>=2",
    "web3>=7.14.0",
]

[project.scripts]
alkahest-oracle = "market_alkahest.oracle_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_alkahest"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests/unit"]

[dependency-groups]
dev = [
    "alkahest-py>=0.4.0",
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
]
